# brady

./: .env.example  .env.proxy.example  .gitignore  LICENSE.md  README.md  flake.nix  gradle.properties  settings.gradle.kts
baste/: Cargo.toml
baste/src/: main.rs
baste/ui/: eslint.config.ts  package.json  prettier.config.mjs  tsconfig.app.json  tsconfig.json  vite.config.ts
baste/ui/src/: app.tsx  index.tsx  utils.ts
bingo/: build.gradle.kts
bingo/renderer/: PROVENANCE.md  package.json  render-bingo.ts
bingo/src/main/kotlin/me/fireballs/brady/bingo/: Bingo.kt  BingoManager.kt  Misc.kt  Square.kt  Squares.kt
bingo/src/main/resources/: plugin.yml
bot/: build.gradle.kts
bot/src/main/kotlin/me/fireballs/brady/bot/: Billboard.kt  Bot.kt  ChatMessageFlusher.kt
bot/src/main/resources/: plugin.yml
broxy/: build.gradle.kts
core/: README.md  build.gradle.kts
core-pgm/: build.gradle.kts
core-pgm/src/main/resources/: plugin.yml
core/src/main/resources/: plugin.yml
cps/src/main/java/me/fireballs/cps/: CPSPlugin.java
cps/src/main/resources/: plugin.yml
goodies/: backpush.sh  collect.sh  plugpush.sh  start.sh  velocity.sh
gradle/: libs.versions.toml
gradleBuild/: build.gradle.kts
gradleBuild/src/main/kotlin/: gradleBuild.java.gradle.kts  gradleBuild.shadow.gradle.kts
patches/api/: 0107-Add-MCCoroutine-compatibility.patch
share/: build.gradle.kts
share/src/main/java/me/fireballs/share/: SharePlugin.java
share/src/main/resources/: config.yml  plugin.yml
tools/: TODO.md  build.gradle.kts
tools/src/main/resources/: plugin.yml
(+175 files in other folders)
